experiment with different layouts for sections of the landing page, outsource styling of the landing page, fix top-nav icon bug when collapsed

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -794,8 +794,8 @@ dd {margin-left:20px;}
 }
 
 .alert {
-    margin-bottom:10px;
-    margin-top:10px;
+    margin-bottom: 25px;
+    margin-top: 25px;
 }
 
 a.accordion-toggle {
@@ -1205,20 +1205,7 @@ body {
     padding-top: 70px;      /* https://getbootstrap.com/docs/3.4/components/#navbar-fixed-top */
 }
 
-main {
-    margin-top:-20px;
-}
 
-h1.title {
-    margin-top: 40px;
-}
-
-h2.subtitle {
-    padding-top: 0px;
-    margin-top: -5px;
-    margin-bottom: 20px;
-    font-weight: 400;
-}
 
 
 
@@ -1300,4 +1287,10 @@ pre > code {
   overflow: auto;
   word-wrap: normal;
   white-space: pre;
+}
+
+@media (max-width: 1200px) {
+    .navbar-nav>li.float {
+        float: left;
+    }
 }
